--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,6 +13,10 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
+/* :root can be useful for declaring global CSS variables: */
+/* In HTML, :root represents the <html> element and is identical to the selector html, except that its specificity is higher */
+
 :root {
   --bg-primary: #fff;
   --bg-secondary: #f0f2f5;
@@ -76,11 +80,10 @@ a {
   top: 0;
   left: 0;
   right: 0;
-  background: rgba(255, 255, 255, 0.768);
+  background: rgba(255, 255, 255, .768);
   bottom: 0;
-  z-index: 99;
+  z-index: 1;
 }
-
 /*----Buttons----*/
 
 /*-----Hovers-----*/
