--- a/frontend/src/components/post/style.css
+++ b/frontend/src/components/post/style.css
@@ -306,6 +306,18 @@
     margin: 0 10px;
     padding: 5px 0;
   }
+
+  .post_actions_admin{
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding: 0 8px 5px 8px;
+    border-top: 1px solid var(--bg-third);
+    border-bottom: 1px solid var(--bg-third);
+    margin: 0 10px;
+    padding: 5px 0;
+  }
+
   .post_action {
     position: relative;
     display: flex;
