--- a/frontend/src/pages/admin/style.css
+++ b/frontend/src/pages/admin/style.css
@@ -1,52 +1,3 @@
-/* main {display: flex;}
-main > * {border: 1px solid;} */
-table {
-  border-collapse: collapse;
-  font-family: helvetica;
-}
-td,
-th {
-  border: 1px solid;
-  padding: 10px;
-  min-width: 200px;
-  background: white;
-  box-sizing: border-box;
-  text-align: left;
-}
-.table-container {
-  position: relative;
-  max-height: 500px;
-  width: 1000px;
-  overflow: scroll;
-  margin: auto;
-}
-
-thead th {
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 2;
-  background: hsl(20, 50%, 70%);
-}
-
-thead th:first-child {
-  left: 0;
-  z-index: 3;
-}
-
-tbody {
-  overflow: scroll;
-  height: 200px;
-}
-
-/* MAKE LEFT COLUMN FIX */
-tr > :first-child {
-  position: -webkit-sticky;
-  position: sticky;
-  background: hsl(180, 50%, 70%);
-  left: 0;
-}
-
 .cards-list {
   z-index: 0;
   width: 80%;
@@ -57,7 +8,7 @@ tr > :first-child {
 }
 
 .card {
-  margin: 30px auto;
+  margin: 30px 30px;
   width: 200px;
   height: 120px;
   border-radius: 40px;
@@ -162,36 +113,38 @@ tr > :first-child {
   transition: color 0.3s ease-in-out;
 }
 
-/* .navbar a:hover{
-    color: #117964;
-} */
-
-/* ////////////////////////SIDEMENU////////////////////// */
-
-.aside {
-  width: 300px;
-  height: 100vh;
-  background: rgb(80, 95, 228);
-}
-.aside nav {
-  font-size: 1em;
-  padding: 1em 0 1em 1em;
-}
-.aside nav ul {
-  list-style: none;
-}
-.aside nav ul a li {
-  color: #fff;
+.noPosts{
+  text-align: center;
   position: relative;
-  width: calc(100% - 1em);
-  padding: 1em 0 1em 1em;
+  top:100px;
+}
+.navbar a:hover{
+    color: #cad3d1;
 }
 
-aside nav ul a {
-  color: inherit;
-  text-decoration: none;
+
+.card-row{
+  display: flex;
+  width:80%;
+  margin: auto;
 }
 
-.sidemenu {
-  margin-top: 110px;
+.width{
+  width: 80%;
+  margin: auto;
+  /* box-shadow: */
+  box-shadow: 0 1px 2px var(--shadow-1);
+}
+
+
+  .image {
+    width: 80px;
+    height: 80px;
+}
+ 
+.HomePage{
+  color: #0096FF;
+  margin-top: 20px;
+  margin-left: 160px;
+  /* color:"#0096FF"; */
 }
